--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
 
 <!-- footer -->
 <footer class="text-center mt-4 py-2">
-    <p>&copy 2021. Made by <b>Siddheshvar Patil</b><br>GRIP TheSparksFoundation.</p>
+    <p>&copy 2021. Made by <b>Aniket Hedau</b><br>GRIP TheSparksFoundation.</p>
 </footer>
